--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/jameswang08/battleship#readme",
   "devDependencies": {
+    "@babel/preset-env": "^7.22.10",
+    "babel-jest": "^29.6.4",
     "eslint": "^8.48.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.0.0",
