--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
   "devDependencies": {
     "@babel/preset-env": "^7.22.10",
     "babel-jest": "^29.6.4",
+    "css-loader": "^6.8.1",
     "eslint": "^8.48.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.28.1",
     "jest": "^29.6.4",
+    "style-loader": "^3.3.3",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
   }
